syntax = "proto3";

package carbon.server;

enum EvictionPolicy { POLICY_UNSPECIFIED = 0; LRU = 1; TINYLFU = 2; SIEVE = 3; }

message CacheConfig {
  string  name = 1;                // unique cache name
  uint64  mem_bytes = 2;           // RAM budget
  string  disk_path = 3;           // NVMe dir (optional -> memory-only)
  uint32  shards = 4;              // default: 2 * cores
  EvictionPolicy policy = 5;       // default: TINYLFU
  uint64  default_ttl_ms = 6;      // 0 = no default TTL
  uint64  max_value_bytes = 7;     // guardrails
}

message CreateCacheRequest { CacheConfig config = 1; }
message CreateCacheResponse { bool created = 1; string message = 2; }
message DropCacheRequest { string name = 1; bool purge_disk = 2; }
message DropCacheResponse { bool dropped = 1; }
message ListCachesRequest {}
message CacheInfo { CacheConfig config = 1; uint64 keys_estimate = 2; }
message ListCachesResponse { repeated CacheInfo caches = 1; }
message DescribeCacheRequest { string name = 1; }
message DescribeCacheResponse { CacheInfo info = 1; }

service CarbonAdminService {
  rpc CreateCache(CreateCacheRequest) returns (CreateCacheResponse);
  rpc DropCache(DropCacheRequest) returns (DropCacheResponse);
  rpc ListCaches(ListCachesRequest) returns (ListCachesResponse);
  rpc DescribeCache(DescribeCacheRequest) returns (DescribeCacheResponse);
}

message PutRequest { string cache = 1; bytes key = 2; bytes value = 3; uint64 ttl_ms = 4; }
message PutResponse { bool ok = 1; }
message GetRequest { string cache = 1; bytes key = 2; }
message GetResponse { bool found = 1; bytes value = 2; uint64 ttl_ms_remaining = 3; }
message DeleteRequest { string cache = 1; bytes key = 2; }
message DeleteResponse { bool deleted = 1; }

service CarbonDataService {
  rpc Put (PutRequest) returns (PutResponse);
  rpc Get (GetRequest) returns (GetResponse);
  rpc Delete (DeleteRequest) returns (DeleteResponse);
}
